# opencv_testing

./: CMakeLists.txt  opencv_testing.cpp
