cmake_minimum_required(VERSION 2.8)
project( OpenCV_Testing )
find_package( OpenCV REQUIRED )
find_package(PkgConfig)
pkg_check_modules(GST REQUIRED gstreamer-1.0)
pkg_check_modules(GSTRTSP gstreamer-rtsp-server-1.0)
include_directories( ${OpenCV_INCLUDE_DIRS} ${GST_INCLUDE_DIRS} )
add_executable( opencv_testing opencv_testing.cpp )
target_link_libraries( opencv_testing ${OpenCV_LIBS} ${GST_LIBRARIES} ${GSTRTSP_LIBRARIES})
install(TARGETS opencv_testing DESTINATION /usr/bin)
install(FILES haarcascade_eye_tree_eyeglasses.xml haarcascade_frontalface_alt.xml DESTINATION /usr/share/opencv_testing)
